fix: Alignment fixeed so body is centered on viewport on STYLE
Fix scrolling problem of content overflow

--- a/style.css
+++ b/style.css
@@ -128,7 +128,6 @@ html {
     var(--background-main-light-colour, lightseagreen),
     var(--background-main-dark-colour, darkgrey)
   );
-  width: 100vw;
 }
 
 body {
@@ -347,15 +346,20 @@ Code example boxes - Grid Container properties
 
 .grid-figure figcaption {
   font-size: 1.25rem;
-  margin: 0.5rem 1rem;
   font-weight: bold;
+  background-color: var(--background-section-secondary-colour, tomato);
+  color: var(--text-light-colour, white);
+  border: solid var(--text-dark-colour, black) 3px;
+  width: 200px;
+  margin: 0.5rem auto;
+  padding: 0.5rem;
 }
 
 /*grid container*/
 .grid-figure-box {
+  margin: 0.5rem auto;
   width: 200px;
   height: 200px;
-  margin: 1rem;
   padding: 0;
   border: solid var(--background-section-secondary-colour, tomato) 3px;
   background-color: black;
@@ -760,15 +764,13 @@ Responsiveness
   .grid-figure {
     display: flex;
   }
-
+  
   .grid-figure figcaption {
-    background-color: var(--background-section-secondary-colour, tomato);
-    color: var(--text-light-colour, white);
-    border: solid var(--text-dark-colour, black) 3px;
-    width: 200px;
     margin: 1rem;
-    padding: 1rem;
   }
+  
+  .grid-figure-box {
+  margin: 1rem;
 }
 /*Media queries for print view*/
 
